wordpress/deployment.yaml
apiVersion: extensions/v1
kind: Deployment
metadata:
  namespace: development
  name: wordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress-site
        tier: frontend
      creationTimestamp: null
    spec:
      volumes:
      - name: wordpress-root
        emptyDir: 
          medium: Memory
      - name: php-fpm-unix-socket
        emptyDir:
          medium: Memory
      - name: nginx-conf
        emptyDir: 
          medium: Memory
      - name: wp-conf
        configMap:
          name: wp-conf
      containers:
        - name: wordpress
          image: <REPLACE WITH DOCKER PHP-FPM IMAGE URL>
          imagePullPolicy : IfNotPresent
          - name: cgi
            containerPort: 9000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: web-files
              mountPath: /var/www/html
        - name: nginx
          image: nginx:1.17.5-alpine
          imagePullPolicy : IfNotPresent
          ports:
          - name: http
            containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
          - name: php-fpm-unix-socket
            mountPath: /var/run
          - name: wordpress-root
            mountPath: /var/www/html
            readOnly: true
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d/
            readOnly: true
