wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
    name: wordpress
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: wordpress
    tier: frontend
  sessionAffinity: None
  type: ClusterIP
