wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: wordpress
  namespace: wordpress
spec:
  rules:
  - host: maxsuel.teste
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
